<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.medicino.www.medicino.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:text="@string/home_text"
            android:textColor="#000000"
            android:gravity="center"
            android:id="@+id/mainText"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp"
                    android:text="@string/user_type_patient"
                    android:id="@+id/patientTextView"
                    android:background="@drawable/bg"
                    android:textColor="#70AD47"
                    android:gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp"
                    android:text="@string/user_type_doctor"
                    android:id="@+id/doctorTextView"
                    android:background="@drawable/bg"
                    android:textColor="#70AD47"
                    android:gravity="center"
                    android:layout_below="@+id/patientTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp"
                    android:text="@string/user_type_pharmacy"
                    android:gravity="center"
                    android:id="@+id/pharmacyTextView"
                    android:background="@drawable/bg"
                    android:textColor="#70AD47"
                    android:layout_below="@+id/doctorTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25sp"
                    android:text="@string/user_type_company"
                    android:id="@+id/companyTextView"
                    android:layout_below="@+id/pharmacyTextView"
                    android:background="@drawable/bg"
                    android:textColor="#70AD47"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
