<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.medicino.www.medicino.Patient_Register">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/patient_registration"
        android:id="@+id/patientRegistrationTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/patientRegistrationTextView"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/patient_phone_no"
                android:gravity="center"
                android:id="@+id/patientPhoneNoEditText"
                android:background="@drawable/edit_text_border"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dotcorNameEditText"
                android:hint="@string/doctor_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_border"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/medicineName"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine1"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine2"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine3"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine4"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine5"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine6"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine7"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine8"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine9"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/moreMedicine10"
                android:hint="@string/medicine_name"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/edit_text_border" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_medicine"
                android:gravity="center"
                android:textColor="@android:color/holo_blue_dark"
                android:id="@+id/addmedicineTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/addPhoto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:text="@string/add_photo"
                android:textColor="@android:color/holo_purple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:text="@string/next_dose"
                android:id="@+id/nextDoseTextView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/next_dose2"
                    android:id="@+id/nextDoseTextView2" />

                <EditText
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:id="@+id/nextDoseEditText"
                    android:background="@drawable/edit_text_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="10dp"
                    android:text="দিন"
                    android:id="@+id/nextDostDayTextView"/>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Send"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:id="@+id/patientRegisterButton"
                android:background="@drawable/button" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
